gitops/flux/apps/source/deis-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controller-api-server-ingress-http
  namespace: deis
spec:
  ingressClassName: internal
  rules:
  - host: deis.deis.hephy.pro
    http:
      paths:
      - backend:
          service:
            name: deis-controller
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
